make my profile prettier

--- a/style.css
+++ b/style.css
@@ -1,26 +1,35 @@
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Poppins:300,400,500,700");
 h1 {
-    color: #2A4D14;
-    font-size: 32px;
+    color: #023E8A;
+    font-size: 48px;
     font-weight: 900;
+    font-family: 'Nunito', sans-serif;
 }
 body {
-    background: #AFF9C9;
-    color: #317B22;
-    font-family: 'Lora', serif;
+    background: #CAF0F8;
+    color: #0096C7;
+    font-family: 'Nunito', sans-serif;
     font-size: 17px;
     font-weight: lighter;
 }
+h3 {
+    color: #0096C7;
+    font-family: 'Nunito', sans-serif;
+    font-size: 17px;
+    font-weight: lighter;
+    padding-left: 0px;
+    display: inline-block;
+}
 li {
-  color: black;
+  color: #ADE8F4;
   display: inline;
   padding: 5px;
   font-size: 35px;
 }
 a {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Nunito', sans-serif;
     text-decoration: none;
-    color: #6B72E1;
+    color: #00B4D8;
     font-weight: 600;
     font-size: 16px;
 }
@@ -29,21 +38,24 @@ a {
 }
 .card-white {
   background: white;
-  padding: 90px;
+  padding: 30px;
   box-shadow: 0px 10px 30px rgb(0 0 0 / 10%);
-  border-radius: 4px;
-  margin: 20px 0px;
+  border-radius: 8px;
+  margin: 20px 20px;
   text-align: center;
 }
 .list-inline {
     list-style: none;
     padding-left: 0px;
 }
-.btn-purple {
-  background-color: #e92020;
+.btn-blue {
+  background-color: #48cae4;
   color: white;
   padding: 13px 18px;
-  border-radius: 4px;
+  border-radius: 15px;
+  border-style: solid;
+  width: 50px;
+  height: 50px;
 }
 @media (max-width: 960px) {
   /* For a screen < 960px, this CSS will be read */
