--- a/style.css
+++ b/style.css
@@ -19,12 +19,19 @@ h3 {
     font-weight: lighter;
     padding-left: 0px;
     display: inline-block;
+    text-align: center;
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+}
+ul {
+  padding-inline-start: 0px;
 }
 li {
   color: #ADE8F4;
   display: inline;
   padding: 5px;
   font-size: 35px;
+  text-align: center;
 }
 a {
     font-family: 'Nunito', sans-serif;
@@ -73,5 +80,11 @@ a {
   /* For a screen < 540px, this CSS will be read */
   .container {
     width: 300px;
+  }
+}
+@media (max-width: 360px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 200px;
   }
 }
